Fixed scrollbar on album bin

--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -72,7 +72,7 @@ body{
   display: flex;
   justify-content: center;
   height: 25%;
-  overflow: hidden;
+  overflow: auto;
   & img{
     height: 150px;
     padding: 0;
